Containers/Kubernetes/config/manifests/initcontainer-wait-db.yaml
# Pod with init container waiting for database
apiVersion: v1
kind: Pod
metadata:
  name: init-wait-db
spec:
  containers:
  - name: app
    image: nginx:1.25-alpine
    ports:
    - containerPort: 80
    securityContext:
      runAsNonRoot: true
      allowPrivilegeEscalation: false
      readOnlyRootFilesystem: true
